<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="2dp">

    <TextView
        android:id="@+id/studentID"
        android:text="@string/student_id"
        android:visibility="gone"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="1dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/checkName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/student_name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingLeft="1dp"/>

    <TextView
        android:id="@+id/studentMobileNo"
        android:layout_below="@id/checkName"
        android:text="@string/Mobile_No"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:paddingLeft="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/studentRollNo"
        android:text="@string/roll_no"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:layout_alignParentRight="true"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/studentClass"
        android:layout_below="@id/studentRollNo"
        android:text="@string/Class"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:layout_toLeftOf="@+id/studentYear"
        android:paddingTop="6dp"
        android:paddingRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/studentYear"
        android:layout_below="@id/studentRollNo"
        android:layout_alignParentRight="true"
        android:text="@string/year"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:paddingTop="6dp"
        android:paddingRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>