<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#b86eefc0"
    android:padding="10dp">

    <TextView
        android:id="@+id/empID"
        android:text="@string/emp_id"
        android:visibility="gone"
        android:textSize="15sp"
        android:textStyle="bold"
        android:padding="1dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/empName"
        android:text="@string/emp_name"
        android:textSize="15sp"
        android:textStyle="bold"
        android:padding="1dp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/empMobileNo"
        android:layout_below="@id/empName"
        android:text="@string/Mobile_No"
        android:textSize="10sp"
        android:padding="1dp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/empCode"
        android:text="@string/code"
        android:textSize="10sp"
        android:textColor="@color/black"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingTop="10dp"
        android:paddingRight="1dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/empDesignation"
        android:layout_below="@id/empCode"
        android:text="@string/designation"
        android:textSize="10sp"
        android:textColor="@color/black"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:padding="1dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>