<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/actionbar"
    tools:context=".DCSA_NB_Start">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_launcher"
        android:id="@+id/noticeBoardLogo"/>

    <TextView
        android:id="@+id/noticeBoardTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notice_board_title"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:padding="10dp"
        android:layout_below="@+id/noticeBoardLogo"
        android:layout_centerHorizontal="true"/>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_below="@id/noticeBoardTitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/noticeBoardTitle1"
                android:text="@string/notice_board_title2"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textStyle="bold"
                android:padding="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/noticeBoardTitle2"
                android:layout_below="@id/noticeBoardTitle1"
                android:text="@string/notice_board_title3"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textStyle="bold"
                android:padding="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <Button
                android:onClick="StartNoticeBoard"
                android:id="@+id/startNoticeBoard"
                android:layout_below="@id/noticeBoardTitle2"
                android:layout_centerHorizontal="true"
                android:text="@string/notice_board_start"
                style="@style/NiceButton"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#3cb879"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/author_name"
            android:textColor="@color/white"
            android:textSize="12dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_company"
            android:textColor="@color/white"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_url"
            android:layout_marginBottom="10dp"
            android:autoLink="web"
            android:textColor="@color/white"
            android:textSize="12dp" />
    </LinearLayout>
</RelativeLayout>
