<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Panel_Faculty">

    <TextView
        android:id="@+id/welcomeTeachers"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:onClick="VerifyStudents"
        android:id="@+id/verifyStudents"
        android:text="@string/verify_student"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/NiceButton"/>

    <Button
        android:onClick="ManageStudent"
        android:id="@+id/manageStudent"
        android:layout_below="@id/verifyStudents"
        android:text="@string/manage_student"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/NiceButton"/>

    <Button
        android:onClick="MyGroup"
        android:id="@+id/myGroup"
        android:layout_below="@id/manageStudent"
        android:text="@string/my_group"
        android:layout_centerInParent="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/NiceButton"/>

</RelativeLayout>
