<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Change_Admin_Password">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/oldEmpPassword"
        android:textSize="12sp"
        android:singleLine="true"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:hint="@string/hint_old_password"
        android:padding="8dp"
        android:gravity="center"
        android:layout_marginTop="80dp"
        android:inputType="text"
        android:drawableRight="@drawable/password"
        android:background="@drawable/nice_edit_text">
        <requestFocus/>
    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newEmpPassword"
        android:hint="@string/hint_new_password"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:inputType="text"
        android:gravity="center"
        android:padding="8dp"
        android:layout_marginTop="20dp"
        android:drawableRight="@drawable/password"
        android:background="@drawable/nice_edit_text"
        android:layout_below="@id/oldEmpPassword"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:id="@+id/change"
        android:layout_below="@id/newEmpPassword"
        android:layout_centerInParent="true"
        android:onClick="ChangePassword"
        android:text="@string/change_password"
        style="@style/NiceButton"/>

</RelativeLayout>
