<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Panel_Admin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:onClick="CreateGroup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/createGroup"
                android:text="@string/create_group"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="#ffffff"
                android:layout_marginTop="20dp"
                style="@style/NiceButton"
                />
            <!--<com.example.ui.CircleButton
                android:id="@+id/button0"
                android:layout_width="100dip"
                android:layout_height="100dip"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dip"
                android:src="@drawable/add_group"
                app:cb_color="#99CC00" />-->

            <Button
                android:onClick="ManageGroup"
                android:id="@+id/showGroupData"
                android:text="@string/manage_group"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:layout_marginTop="20dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/NiceButton"/>

            <Button
                android:onClick="VerifyEmployee"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/manageEmployee"
                android:text="@string/verify_emp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="#ffffff"
                android:layout_marginTop="20dp"
                style="@style/NiceButton"
                />

            <Button
                android:onClick="ManageEmployee"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/showMyEmp"
                android:text="@string/manage_emp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="#ffffff"
                android:layout_marginTop="20dp"
                style="@style/NiceButton"
                />
            <!--<Button
                android:onClick="Change_Admin_Password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/adminPanel"
                android:text="@string/change_password"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="#ffffff"
                android:layout_marginTop="20dp"
                style="@style/NiceButton"
                />-->
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
