<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/books"
    tools:context=".Login_Register">
    <RelativeLayout
        android:background="@drawable/transparent_bg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">


        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="fill_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/dcsaLogo"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/logo"
                    android:background="@drawable/round_button_bg"
                    android:layout_width="150dp"
                    android:layout_height="150dp" />
                <RelativeLayout
                    android:padding="10dp"
                    android:background="#31ffffff"
                    android:id="@+id/buttonLayout"
                    android:layout_below="@id/dcsaLogo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/mobile"
                        android:hint="@string/hint_login_text"
                        android:textSize="12sp"
                        android:gravity="center"
                        android:layout_marginBottom="20dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:inputType="textPhonetic"
                        android:background="@drawable/nice_edit_text"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/admin_icon"
                        android:padding="8dp">
                        <requestFocus/>
                    </EditText>
                    <EditText
                        android:id="@+id/password"
                        android:hint="@string/hint_login_password"
                        android:textSize="12sp"
                        android:inputType="textPassword"
                        android:gravity="center"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@id/mobile"
                        android:background="@drawable/nice_edit_text"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/pass_lock"
                        android:padding="8dp"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/rLayout2"
                    android:layout_below="@id/buttonLayout"
                    android:layout_centerHorizontal="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/regButton"
                        android:text="@string/register"
                        android:textColor="#3cb879"
                        android:layout_toLeftOf="@+id/bar"
                        android:layout_toStartOf="@+id/bar"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/NiceTransButton"/>

                    <TextView
                        android:id="@+id/bar"
                        android:text="|"
                        android:textSize="25sp"
                        android:textColor="#ffffff"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:paddingTop="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/loginButton"
                        android:text="@string/login"
                        android:textColor="@color/white"
                        android:layout_toRightOf="@+id/bar"
                        android:layout_toEndOf="@+id/bar"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="15dp"
                        style="@style/NiceButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</RelativeLayout>
